# collateral-combat

./: .gitignore  .gitleaks.toml  @AGENT.md  @fix_plan.md  ADR.md  CLAUDE.md  CLAUDE_PROJECT_CONTEXT.md  CLAUDE_TYPES_REFERENCE.md  CONTEXT.md  CURRENT_TASK.md  DATA_FLOWS.md  ECONOMICS.md  MAINNET_LAUNCH_PLAN.md  MIGRATION_PLAN.md  ORACLE_PLAN.md  ORACLE_TRUTH.md  PRODUCT.md  PROMPT.md  README.md  SECURITY.md  SECURITY_AUDIT.md  knip.json  render.yaml  start-pipeline.sh
.agents/ralph/: agents.sh  config.sh  log-activity.sh  loop.sh
.agents/tasks/: prd-backend.md  prd-contracts.md  prd-free-bets-rebates.md  prd-frontend.md  prd-parallel.md  prd.md
.github/: dependabot.yml
.planning/: MAINNET_DEPLOYMENT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/audits/: AUDIT-2026-01-22.md  BACKEND-AUDIT.md  CONTRACT-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  (+5 more)
.ralph/: IMPLEMENTATION_PLAN.md  plan-backend.md  plan-contracts.md  plan-frontend-lib.md  plan-frontend-ui.md  progress.md
automation/: lock.sh  manager.sh  notify.sh  ralph-parallel-worker.sh  ralph-queue.sh  ralph-worker.sh  start-parallel-workers.sh  start-ralph-workers.sh  telegram-listener.sh  verify.sh  worker.sh
backend/: .env.example  .gitignore  @fix_plan.md  CLAUDE.md  PROMPT.md  audit-ci.jsonc  jest.config.js  package-lock.json  package.json  render.yaml
docs/: FAILURE-SCENARIOS.md  MULTISIG-SETUP.md  SECURITY-AUDIT-REPORT.md
logs/: .telegram_offset  marathon_log.txt
programs/battle_program/programs/battle_program/: Cargo.toml
programs/battle_program/programs/battle_program/src/: lib.rs
programs/prediction_program/programs/prediction_program/: Cargo.toml
programs/prediction_program/programs/prediction_program/src/: lib.rs
programs/session_betting/: Anchor.toml  Cargo.toml
programs/session_betting/programs/session_betting/: Cargo.toml
programs/session_betting/programs/session_betting/src/: lib.rs
programs/session_betting/tests/: session_betting.ts
scripts/: deploy-mainnet.sh  setup-multisig.ts  test-battle-contract.ts  transfer-authority-to-multisig.ts  verify-deployment.sh
solana/: @fix_plan.md  PROMPT.md
web/: .circuit_breaker_state  .env.example  .gitignore  .ralph_session  .ralph_session_history  .response_analysis  @fix_plan-ui.md  @fix_plan.md  CLAUDE.md  PROJECT_CONTEXT.md  PROMPT-logic.md  PROMPT-ui.md  PROMPT.md  audit-ci.jsonc  jest.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  progress.json  status.json  tailwind.config.js  tailwind.config.ts  tsconfig.tsbuildinfo
(+515 files in other folders)
