[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"        # Optimize for size
strip = "symbols"      # Strip debug symbols
panic = "abort"        # Remove panic unwinding code
incremental = false    # Better optimization

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

