[package]
name = "battle_program"
version = "0.1.0"
description = "PvP trading battle program with dispute mechanism"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "battle_program"

[features]
default = ["no-log-ix-name"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
