[package]
name = "prediction_program"
version = "0.1.0"
description = "Decentralized price prediction game using Pyth oracle"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_program"

[features]
default = ["no-log-ix-name"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
bytemuck = { version = "1.14", features = ["derive"] }
